[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/gamestates/game_popup.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/ui_theme.tres" type="Theme" id=2]

[node name="GamePopup" type="CenterContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_left = 100.0
margin_top = 122.0
margin_right = 188.0
margin_bottom = 166.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 83.0
margin_bottom = 39.0
custom_constants/separation = 10
alignment = 1

[node name="LabelMessage" type="Label" parent="PanelContainer/VBoxContainer"]
margin_right = 78.0
margin_bottom = 12.0
text = "Popup Message"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
margin_top = 22.0
margin_right = 78.0
margin_bottom = 34.0
size_flags_horizontal = 3

[node name="ButtonRetry" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_right = 30.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Retry"

[node name="ButtonContinue" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
margin_left = 34.0
margin_right = 78.0
margin_bottom = 12.0
size_flags_horizontal = 3
text = "Continue"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ButtonRetry" to="." method="_on_ButtonRetry_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/ButtonContinue" to="." method="_on_ButtonContinue_pressed"]
